# retinanet_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py  tags
doc/: README.md  requirements.txt
src/retina_detection/: README.md  main.py  test.py
src/retina_detection/model/: detector.py  fpn.py
src/retina_detection/train/: augmentations.py  collate.py  dataset.py  train.py  training.py
src/retina_detection/train/configs/: retinanet18.yaml  retinanet18_br.yaml
src/retina_detection/train/test/: transform_test.py
src/retina_detection/train/train_utils/: add_no_label_set.py  combine_coco.py  logger.py  utils.py  yolo_to_coco.py
