<?xml version="1.0"?>
<package format="2">
  <name>retinanet_ros</name>
  <version>0.0.0</version>
  <description>retina_detection package</description>

  <maintainer email="steveminq@utexas.edu">steveminq</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>
 </package>
